Fixed the styling in the css taht caused everything in the page to be 2 times too big.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@
 
 } */
 
-#submitButton {
+/* #submitButton {
   width: 200%;
   padding: 20px;
   margin: 10px;
@@ -128,5 +128,5 @@
   justify-content: space-between;
   align-items: center;
   transition: all 0.3s ease;
-}
+} */
 
